--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="bottom">
-            <input type="range" name="range" id="myProgressBar" min="0" max="100">      <!--This is for a range bar-->
+            <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">      <!--This is for a range bar-->
             <div class="icons">
                 <!--fontawesome icons-->
                 <i class="fas fa-3x fa-step-backward"></i>
