songs in colums flex working

--- a/index.html
+++ b/index.html
@@ -21,59 +21,59 @@
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\1.jpg" alt="1">
+                    <span class="songName">Am I going crazy - Jorj</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\2.jpg" alt="1">
+                    <span class="songName">Get me to the moon - Justin</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\3.jpg" alt="1">
+                    <span class="songName">Friends never lie ! - Arina</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\4.jpg" alt="1">
+                    <span class="songName">Hard to forget - Maze</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\5.jpg" alt="1">
+                    <span class="songName">I will be yours Forever - Joe</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\6.jpg" alt="1">
+                    <span class="songName">And last summer - Salina</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\7.jpg" alt="1">
+                    <span class="songName">Memories got you back - Tom</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\10.jpg" alt="1">
-                    <span>Let me Love You</span>
+                    <img src="covers\8.jpg" alt="1">
+                    <span class="songName">Hey, you konw that? - Lisa</span>
                     <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far fa-play-circle"></i> </span>
+                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
                     </span>
                 </div>
             </div>
