--- a/index.html
+++ b/index.html
@@ -1,99 +1,93 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Spotify | Enjoy the best music here</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Spotify - Your favourite music is here</title>
         <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li class="brand"><img src="logo.png" alt="Spotify"/>Spotify</li>
-                <li>Home</li>
-                <li>About</li>
-            </ul>
-        </nav>
+        </head>
+<body>
+    <nav>
+        <ul>
+            <li class="brand"><img src="logo.png" alt="Spotify"> Spotify</li>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+    </nav>
 
-        <div class="container">
-           <div class="songList">
+    <div class="container">
+        <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span class="songName">Am I going crazy - Jorj</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\2.jpg" alt="1">
-                    <span class="songName">Get me to the moon - Justin</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\3.jpg" alt="1">
-                    <span class="songName">Friends never lie ! - Arina</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="2" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\4.jpg" alt="1">
-                    <span class="songName">Hard to forget - Maze</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="3" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\5.jpg" alt="1">
-                    <span class="songName">I will be yours Forever - Joe</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\6.jpg" alt="1">
-                    <span class="songName">And last summer - Salina</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="5" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\7.jpg" alt="1">
-                    <span class="songName">Memories got you back - Tom</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="6" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\8.jpg" alt="1">
-                    <span class="songName">Hey, you konw that? - Lisa</span>
-                    <span class="songlistplay">
-                        <span class="timestamp">05.34 <i class="far songItemPlay fa-play-circle"></i> </span>
-                    </span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="7" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="8" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="9" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
             </div>
-            <div class="songbanner"> </div>
-          </div>
         </div>
+        <div class="songBanner"></div>
+    </div>
 
-        <div class="bottom">
-            <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">      <!--This is for a range bar-->
-            <div class="icons">
-                <!--fontawesome icons-->
-                <i class="fas fa-3x fa-step-backward"></i>
-                <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
-                <i class="fas fa-3x fa-step-forward"></i>
-            </div> 
-            <div class="songInfo">
-                <img src="playing.gif" width="42px" alt="" id="gif"> Let me Love You - Justine Beiber
-            </div>
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-step-backward" id="previous"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class="fas fa-3x fa-step-forward" id="next"></i> 
         </div>
-        <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
-        <script src="script.js"></script>
-    </body>
+        <div class="songInfo">
+            <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
+</body>
 </html>
